--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "jascha030/DIC",
+  "name": "jascha030/dic",
   "description": "Simple PHP DIC Container",
   "version": "1.1.1",
   "type": "library",
