--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     {
       "name": "Jascha van Aalst",
       "email": "contact@jaschavanaalst.nl",
+      "homepage": "https://github.com/jascha030",
       "role": "Developer"
     }
   ],
